--- a/assets/style.css
+++ b/assets/style.css
@@ -5,9 +5,10 @@
 }
 body{
 	background-color: rgb(37, 62, 154);
-	background-image: url(bg.jpeg);
-	background-size: cover;
+	background-image: url(intra.jpeg);
+	background-size:cover;
 	background-repeat: no-repeat;
+	background-attachment:fixed;
 	height: 100vh;  
 }           
 .container {
@@ -15,14 +16,23 @@ body{
 	left: 50%;
 	top: 50px;
 	transform: translateX( -50%);
-
 	width: 250px;
 }
 img{
 	width: 55px;
 	margin-bottom: 30px;
+	margin-top: 50px;
+	transition: .3;
+	animation: animate 2s;
 }
-
+@keyframes animate{
+	0%{
+		transform: scale(0.1);
+	}
+	100%{
+		transform: scale(1);
+	}
+}
 .login{
 	padding: 5px 5px 5px 20px;
 	color: white;
@@ -35,6 +45,10 @@ img{
 	outline: none;
 	text-align: left;
 	font-size: 10px;
+	transition: .3s;
+}
+.login:hover{
+	transform: scale(1.1);
 }
 .editpass{
 	text-align: center;
@@ -52,26 +66,33 @@ img{
 	outline: none;
 	font-size: 10px;
 	letter-spacing: 6px; 
+	transition: .3s;
 }
-.password::placeholder {
+.password:hover{
+	transform: scale(1.1);
+}
+.password::placeholder{
 	letter-spacing: 0.1px;
 	font-size: 10px;
 }
 .signin{
-	background-color: rgb(255, 200, 73);
+	background-color: #F9DBBB;
 	font-size: 15px;
 	border: none;
 	padding: 6px 94px;
-	color: white;
+	color: #000;
 	cursor: pointer;
 	transition: .3s; 
 	width: 100%;
 }
-.signin:hover {
-	background-color: rgb(226, 180, 71);
+.signin:active{
+	transform: scale(0.8);
+}
+.signin:hover{
+	background-color: #ffddb897;
 }
 .question{
-	color: rgb(255, 200, 73);
+	color: #F9DBBB;
 	font-size: 10px;
 	text-decoration: none;
 	position: relative;
@@ -83,7 +104,7 @@ img{
 	font-size: 8px;
 }  
 .cond{
-	color: rgb(255, 200, 73);
+	color: #F9DBBB;
 	font-size: 10px;
 	text-decoration: none;
 	position: relative;
@@ -97,7 +118,7 @@ img{
 	bottom: 0;
 	width: 0%;
 	height: 1px;
-	background-color: #dcc112;
+	background-color: #F9DBBB;
 	z-index: -1;
 	transition: .3s;
 	left: 50%;
@@ -113,7 +134,7 @@ img{
 	bottom: 0;
 	width: 0%;
 	height: 1px;
-	background-color: #dcc112;
+	background-color: #F9DBBB;
 	z-index: -1;
 	transition: .3s;
 	left: 50%;
