--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ body{
 	top: 50px;
 	transform: translateX( -50%);
 	width: 250px;
-	margin-top: 20%;
+	margin-top: 15%;
 }
 img{
 	width: 55px;
@@ -121,7 +121,7 @@ img{
 	bottom: 0;
 	width: 0%;
 	height: 1px;
-	background-color: #F9DBBB;
+	background-color: #f9dbbba4;
 	z-index: -1;
 	transition: .3s;
 	left: 50%;
@@ -137,7 +137,7 @@ img{
 	bottom: 0;
 	width: 0%;
 	height: 1px;
-	background-color: #F9DBBB;
+	background-color: #f9dbbba4;
 	z-index: -1;
 	transition: .3s;
 	left: 50%;
